--- a/index.html
+++ b/index.html
@@ -24,6 +24,49 @@
       </div>
   </header>
   <!-- end of header -->
+  <!-- content divider -->
+  <div class="content-divider"></div>
+  <!-- end content divider -->
+  <section class="skills clearfix">
+        <!-- skills -->
+      <article class="skill">
+          <span class="skill-icon">
+            <i class="fas fa-car"></i>
+          </span>
+          <h4 class="skill-title">made in Germany</h4>
+          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat eius praesentium omnis quo. Facilis soluta provident officiis dolorum repudiandae.</p>
+      </article>
+        <!-- end of skills -->
+            <!-- skills -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-car"></i>
+        </span>
+        <h4 class="skill-title">made in Kenya</h4>
+        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat eius praesentium omnis quo. Facilis soluta provident officiis dolorum repudiandae.</p>
+    </article>
+      <!-- end of skills -->
+          <!-- skills -->
+          <article class="skill">
+            <span class="skill-icon">
+              <i class="fas fa-car"></i>
+            </span>
+            <h4 class="skill-title">made in Estonia</h4>
+            <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat eius praesentium omnis quo. Facilis soluta provident officiis dolorum repudiandae.</p>
+        </article>
+          <!-- end of skills -->
+              <!-- skills -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-car"></i>
+        </span>
+        <h4 class="skill-title">made in Brussels</h4>
+        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat eius praesentium omnis quo. Facilis soluta provident officiis dolorum repudiandae.</p>
+    </article>
+      <!-- end of skills -->
+
+  </section>
+
   
     <script src="app.js"></script>
   </body>
