index.html added

--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
       <!-- end of skills -->
 
   </section>
+<!-- about -->
+<section>
+  <div class="section-center clearfix">
+    <!-- about img -->
+    <div class="about-img">
+      <div class="about-picture-container">
+        <img src="https://images.pexels.com/photos/120049/pexels-photo-120049.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" srcset="">
+      </div>
+
+    </div>
+    <!-- about info -->
+    <div class="about-info">
+      <div class="section-title">
+        <h3>About Our</h3>
+        <h2>Mercedes Benz</h2>
+      </div>
+<!-- end about -->
+<p class="about-text">
+  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit ab modi soluta, tempore consequuntur?
+</p>
+<p class="about-text">
+  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit ab modi soluta, tempore consequuntur?
+</p>
+<a href="about.html" class="btn">Learn More</a>
+    </div>
+  </div>
+</section>
+
 
   
     <script src="app.js"></script>
