sections added at the image area

--- a/index.html
+++ b/index.html
@@ -93,7 +93,43 @@
     </div>
   </div>
 </section>
+<section class="products">
+  <div class="section-center clearfix">
+    <article class="products-info">
+      <div class="section-title">
+        <h3>checkout</h3>
+        <h2>our interior</h2>
+      </div>
+<!-- end of title -->
+<p class="product-text">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, hic aspernatur! Itaque commodi fugiat suscipit adipisci iure eos iusto perspiciatis incidunt illum. Eligendi, recusandae doloribus.
+</p>
+<a href="products.html" class="btn">inventory</a>
+    </article>
+    <article class="product-inventory clearfix">
 
+       <!-- single product -->
+       <div class="product">
+         <img src="https://images.pexels.com/photos/193997/pexels-photo-193997.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="single product" class="product-img">
+         <h4 class="product-title">ginger</h4>
+         <h4 class="product-price">USD200k</h4>
+       </div>
+      <!-- end of single products -->
+      <div class="product">
+        <img src="https://images.pexels.com/photos/498697/pexels-photo-498697.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="single product" class="product-img">
+        <h4 class="product-title">ginger</h4>
+        <h4 class="product-price">USD200k</h4>
+      </div>
+     <!-- end of single products -->
+     <div class="product">
+      <img src="https://images.pexels.com/photos/1104768/pexels-photo-1104768.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="single product" class="product-img">
+      <h4 class="product-title">ginger</h4>
+      <h4 class="product-price">USD200k</h4>
+    </div>
+   <!-- end of single products -->
+    </article>
+  </div>
+</section>
 
   
     <script src="app.js"></script>
