services section added

--- a/index.html
+++ b/index.html
@@ -130,6 +130,69 @@
     </article>
   </div>
 </section>
+<!-- service section -->
+<section class="services">
+  <div class="section-title services-title">
+    <h2>Explore</h2>
+    <h3>Our services</h3>
+  </div>
+  <div class="section-center clearfix"> 
+    <!-- single card -->
+    <article class="service-card">
+      <div class="service-img-container">
+        <img src="https://images.pexels.com/photos/3807811/pexels-photo-3807811.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="service-img">
+        <!-- icon -->
+<span class="service-icon">
+  <i class="fas fa-wrench fa-fw"></i>
+</span>
+        <!-- end icon -->
+      </div>
+      <div class="service-info">
+        <h4>wheel balancing</h4>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam inventore quod alias sequi id fugit!</p>
+<a href="product.html" class="btn service-btn">Read More</a>
+      </div>
+    </article>
+
+<!-- end service section -->
+ <!-- single card -->
+ <article class="service-card">
+  <div class="service-img-container">
+    <img src="https://images.pexels.com/photos/4315570/pexels-photo-4315570.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="service-img">
+    <!-- icon -->
+<span class="service-icon">
+  <i class="fas fa-life-ring fa-fw"></i>
+</span>
+    <!-- end icon -->
+  </div>
+  <div class="service-info">
+    <h4>Engine inspection</h4>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam inventore quod alias sequi id fugit!</p>
+<a href="product.html" class="btn service-btn">Read More</a>
+  </div>
+</article>
+
+<!-- end service section -->
+ <!-- single card -->
+ <article class="service-card">
+  <div class="service-img-container">
+    <img src="https://images.pexels.com/photos/2244746/pexels-photo-2244746.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="service-img">
+    <!-- icon -->
+<span class="service-icon">
+  <i class="fas fa-wrench fa-fw"></i>
+</span>
+    <!-- end icon -->
+  </div>
+  <div class="service-info">
+    <h4>Panel beating</h4>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam inventore quod alias sequi id fugit!</p>
+<a href="product.html" class="btn service-btn">Read More</a>
+  </div>
+</article>
+
+<!-- end service section -->
+  </div>
+</section>
 
   
     <script src="app.js"></script>
