contact section added

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <span class="skill-icon">
             <i class="fas fa-car"></i>
           </span>
-          <h4 class="skill-title">made in Germany</h4>
-          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat eius praesentium omnis quo. Facilis soluta provident officiis dolorum repudiandae.</p>
+          <h4 class="skill-title">German</h4>
+          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, distinctio!</p>
       </article>
         <!-- end of skills -->
             <!-- skills -->
@@ -42,17 +42,17 @@
         <span class="skill-icon">
           <i class="fas fa-car"></i>
         </span>
-        <h4 class="skill-title">made in Kenya</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat eius praesentium omnis quo. Facilis soluta provident officiis dolorum repudiandae.</p>
+        <h4 class="skill-title">Australian</h4>
+        <p class="skill-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, incidunt!</p>
     </article>
       <!-- end of skills -->
           <!-- skills -->
           <article class="skill">
             <span class="skill-icon">
-              <i class="fas fa-car"></i>
+              <i class="far fa-forklift"></i>
             </span>
-            <h4 class="skill-title">made in Estonia</h4>
-            <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat eius praesentium omnis quo. Facilis soluta provident officiis dolorum repudiandae.</p>
+            <h4 class="skill-title">American</h4>
+            <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, voluptates?</p>
         </article>
           <!-- end of skills -->
               <!-- skills -->
@@ -60,8 +60,8 @@
         <span class="skill-icon">
           <i class="fas fa-car"></i>
         </span>
-        <h4 class="skill-title">made in Brussels</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat eius praesentium omnis quo. Facilis soluta provident officiis dolorum repudiandae.</p>
+        <h4 class="skill-title">Kenyan</h4>
+        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, sed.</p>
     </article>
       <!-- end of skills -->
 
@@ -193,7 +193,72 @@
 <!-- end service section -->
   </div>
 </section>
+<!-- contact section -->
+<section class="contact">
+  <div class="section-center clearfix">
+    <!-- info -->
+    <article class="contact-info">
+      <!-- contact item -->
+      <div class="contact-item">
+        <h4 class="contact-title">
+          <span class="contact-icon">
+            <i class="fas fa-location-arrow"></i>
+          </span>
+          Adress
+        </h4>
+        <h4 class="contact-text">
+          123 40-9647<br>
+          Buruburu ,NRB
+        </h4>
+      </div>
+<!-- END of contact item -->
+   <!-- contact item -->
+   <div class="contact-item">
+    <h4 class="contact-title">
+      <span class="contact-icon">
+        <i class="fas fa-envelope"></i>
+      </span>
+    Email
+    </h4>
+    <h4 class="contact-text">
+     email@gmail.com
+    </h4>
+  </div>
+<!-- END of contact item -->
+   <!-- contact item -->
+   <div class="contact-item">
+    <h4 class="contact-title">
+      <span class="contact-icon">
+        <i class="fas fa-phone"></i>
+      </span>
+     Phone
+    </h4>
+    <h4 class="contact-text">
+     +254 054 0330 00
+    </h4>
+  </div>
+<!-- END of contact item -->
+    </article>
+    <!-- form -->
+    <article class="contact-form">
+      <h3>contact us</h3>
+      <div class="form-group">
+        <form action="
+        ">
+      
+      <input type="text" class="form-control" placeholder="name" name="name">
+      <input type="email" class="form-control" placeholder="email" name="email">
+      <textarea name="message"  placeholder =" message" class="form-control"  rows="5"></textarea>
+      </form>
+      </div>
+      <!-- button -->
+      <button type="submit" class="submit-btn btn">submit here</button>
+    </article>
+  </div>
+</section>
 
+
+<!-- end of contact -->
   
     <script src="app.js"></script>
   </body>
