--- a/index.html
+++ b/index.html
@@ -257,9 +257,24 @@
   </div>
 </section>
 
-
 <!-- end of contact -->
+<!-- footer -->
+<footer class="footer">
+  <div class="section-center">
+    <div class="social-icon">
+      <a href="#" class="social-icon"> <i class="fab fa-facebook"></i> </a>
+      <a href="#" class="social-icon"> <i class="fab fa-twitter"></i> </a>
+      <a href="#" class="social-icon"> <i class="fab fa-instagram"></i> </a>
+    </div>
+    <h4 class="footer-text">
+      &copy;<span id="date">2020</span>
+      <span class="company">mercedez benz</span>
+      All rights reserved
+    </h4>
+  </div>
+</footer>
+<!-- end footer -->
   
-    <script src="app.js"></script>
+  <script src="./app.js"></script>
   </body>
 </html>
