--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
   </head>
   <body>
   <!-- navbar -->
+  <!-- nav btn -->
+<span class="nav-btn" id="nav-btn">
+  <i class="fas fa-bars"></i>
+</span>
+<nav class="navbar" id="navbar">
+<div class="nav-header">
+  <span class="nav-close" id="nav-close">
+    <i class="fas fa-times"></i>
+  </span>
+</div>
+<ul class="nav-items">
+  <li><a href="index.html" class="nav-link">Home</a></li>
+  <li><a href="skills.html" class="nav-link">skills</a></li>
+  <li><a href="about.html" class="nav-link">about</a></li>
+  <li><a href="products.html" class="nav-link">products</a></li>
+</ul>
+</nav>
+  <!-- end of nav -->
   <!-- header -->
   <header class="header">
       <div class="banner">
@@ -111,19 +129,19 @@
        <!-- single product -->
        <div class="product">
          <img src="https://images.pexels.com/photos/193997/pexels-photo-193997.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="single product" class="product-img">
-         <h4 class="product-title">ginger</h4>
+         <h4 class="product-title">Benz CLA</h4>
          <h4 class="product-price">USD200k</h4>
        </div>
       <!-- end of single products -->
       <div class="product">
         <img src="https://images.pexels.com/photos/498697/pexels-photo-498697.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="single product" class="product-img">
-        <h4 class="product-title">ginger</h4>
+        <h4 class="product-title">Benz G-Class.</h4>
         <h4 class="product-price">USD200k</h4>
       </div>
      <!-- end of single products -->
      <div class="product">
       <img src="https://images.pexels.com/photos/1104768/pexels-photo-1104768.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="single product" class="product-img">
-      <h4 class="product-title">ginger</h4>
+      <h4 class="product-title">Benz AMG GT</h4>
       <h4 class="product-price">USD200k</h4>
     </div>
    <!-- end of single products -->
